[MENU] about z-index fixed

--- a/src/scss/global/_about.scss
+++ b/src/scss/global/_about.scss
@@ -8,6 +8,7 @@ font: 500 1.2rem 'Dinpro';
 margin-right:8vw;
 }
 .about {
+	z-index:5;
 	position:absolute;
 	display: flex;
 	align-items: center;
